--- a/artwebsandroid/res/values/strings.xml
+++ b/artwebsandroid/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="menu_settings">Settings</string>
     <string name="hello">Hello World, ArtwebsandroidActivity!</string>
 
+    <string name="dropdown_refresh">dropdown_refresh</string>
+    <string name="last_update">last_update</string>
+    <string name="release_refresh">release_refresh</string>
+    <string name="loading">loading</string>
+    <string name="load_complete">load_complete</string>
 </resources>
